fix: overflow

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -15,11 +15,11 @@
 
 body {
   width: 100vw;
-  /* height: 100vh; */
+  height: 100vh;
   margin: 0;
   position: relative;
   z-index: -999;
-  min-height: 100vh;
+  overflow: hidden;
 }
 .background {
   position: absolute;
